--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "cryptiles": ">=4.1.2",
+    "macaddress": ">=0.2.9",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "cryptiles": ">=4.1.2",
     "styled-components": "^4.0.2",
-    "url-parse": ">=1.4.3",
-    "macaddress": ">=0.2.9"
+    "url-parse": ">=1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
